--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 </header>
 <main>
-<!-- <section class="first__section">
+ <section class="first__section">
       <div class="container">
         <div class="first__wrapper">
           <h1 class="visually-hidden">Site_information</h1>
@@ -35,7 +35,7 @@
           <button class="first__btn">Get Scootin</button>
         </div>
     </div>
-  </section>   -->
+  </section> 
   <section class="second__section">
     <div class="container">
       <div class="second__wrapper">
