--- a/index.html
+++ b/index.html
@@ -65,19 +65,22 @@
       </div>
     </div>
   </section>
-  <!-- <section class="easy__section">
+  <section class="easy__section">
     <div class="container">
       <div class="easy__wrapper">
+        <img src="image/easy_img.png" alt="easy-img" class="easy__img--responsive"> 
         <div class="easy__wrapper-left">
           <h2 class="easy__title">Easy to use riding telemetry</h2>
           <p class="easy__text">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
           <button class="main__btn" type="button">Learn More</button>
         </div>
-        <img src="image/easy_img.png" alt="easy-img" class="easy__img">
+        <div class="easy__wrapper-right">
+          <img src="image/easy_img.png" alt="easy-img" class="easy__img">
+        </div>
       </div>
     </div>
   </section>
-  <section class="coming__section">
+  <!-- <section class="coming__section">
     <div class="container">
       <div class="coming__wrapper">
         <div class="coming__wrapper-left">
