--- a/index.html
+++ b/index.html
@@ -80,19 +80,21 @@
       </div>
     </div>
   </section>
-  <!-- <section class="coming__section">
+  <section class="coming__section">
     <div class="container">
       <div class="coming__wrapper">
+        <div class="coming__wrapper-right">
+          <img src="image/coming__img.png" alt="easy-img" class="coming__img--responsive"></div>
         <div class="coming__wrapper-left">
           <h2 class="coming__title">Coming to a city near you</h2>
           <p class="coming__text">TScoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
           <button class="main__btn" type="button">Learn More</button>
         </div>
-        <img src="image/coming__img.png" alt="easy-img" class="coming__img">
+        <div class="coming__wrapper-right"><img src="image/coming__img.png" alt="easy-img" class="coming__img"></div>
       </div>
     </div>
   </section>
-  <section class="zero__section">
+  <!-- <section class="zero__section">
     <div class="container">
       <div class="zero__wrapper">
         <div class="zero__wrapper-left">
@@ -103,7 +105,7 @@
         <img src="image/coming__img.png" alt="zero-img" class="zero__img">
       </div>
     </div>
-  </section>  -->
+  </section> -->
 <section class="last__section">
   <div class="container">
     <div class="last__wrapper">
