--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
   <section class="coming__section">
     <div class="container">
       <div class="coming__wrapper">
-        <div class="coming__wrapper-right">
-          <img src="image/coming__img.png" alt="easy-img" class="coming__img--responsive"></div>
+        <img src="image/coming__img.png" alt="easy-img" class="coming__img--responsive">
         <div class="coming__wrapper-left">
           <h2 class="coming__title">Coming to a city near you</h2>
           <p class="coming__text">TScoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
@@ -94,18 +93,19 @@
       </div>
     </div>
   </section>
-  <!-- <section class="zero__section">
+  <section class="zero__section">
     <div class="container">
       <div class="zero__wrapper">
+        <img src="image/coming__img.png" alt="zero-img" class="zero__img--responsive">
         <div class="zero__wrapper-left">
           <h2 class="zero__title">Zero hassle payments</h2>
           <p class="zero__text">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
           <button class="main__btn" type="button">Learn More</button>
         </div>
-        <img src="image/coming__img.png" alt="zero-img" class="zero__img">
+        <div class="zero__wrapper-right"><img src="image/coming__img.png" alt="zero-img" class="zero__img"></div>
       </div>
     </div>
-  </section> -->
+  </section>
 <section class="last__section">
   <div class="container">
     <div class="last__wrapper">
