--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scoot</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
 <header class="site__header">
@@ -114,7 +114,7 @@
 
       <div class="last__right">
         <a href="https://www.apple.com/ru/app-store/" class="last__right-link " target="_blank"><img src="image/apple__store.png" alt="last-picture-1" class="last__right__img apple__img"></a>
-        <a href=" https://play.google.com/store" class="last__right-link" target="_blank"><img src="image/google__store.png"alt="last-picture-2" class="last__right__img google__img"></a>
+        <a href=" https://play.google.com/store" class="last__right-link" target="_blank"><img src="image/google__store.png" alt="last-picture-2" class="last__right__img google__img"></a>
       </div>
     </div>
   </div>
